Fixes: Checked QPushbutton ignores stylesheet backround:

This is because the light() color of the palette is used and it was
not modified.

Task-number: QTBUG-7216
Reviewed-by: jbache